--- a/configs/kitty/mocha.conf
+++ b/configs/kitty/mocha.conf
@@ -9,8 +9,8 @@
 
 
 # The basic colors
-foreground              #CDD6F4
-background              #1E1E2E
+foreground              #FFFFFF
+background              #000000
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
