--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -1,6 +1,6 @@
 background            #000000
 foreground            #00fa15
-cursor                ##aeff00
+cursor                #aeff00
 selection_background  #414141
 color0                #000000
 color8                #666666
