--- a/configs/starship/starship.toml
+++ b/configs/starship/starship.toml
@@ -1,9 +1,7 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
-[](color_orange)\
-$os\
-[](bg:color_yellow fg:color_orange)\
+[](color_red1)\
 $directory\
 [](fg:color_yellow bg:color_aqua)\
 $git_branch\
@@ -21,8 +19,6 @@ $python\
 [](fg:color_blue bg:color_bg3)\
 $docker_context\
 $conda\
-[](fg:color_bg3 bg:color_bg1)\
-$time\
 [ ](fg:color_bg1)\
 $line_break$character"""
 
@@ -38,6 +34,7 @@ color_green = '#98971a'
 color_orange = '#d65d0e'
 color_purple = '#b16286'
 color_red = '#cc241d'
+color_red1 = '#d60000'
 color_yellow = '#d79921'
 
 [os]
@@ -74,7 +71,7 @@ format = '[ $user ]($style)'
 [directory]
 style = "fg:color_fg0 bg:color_yellow"
 format = "[ $path ]($style)"
-truncation_length = 3
+truncation_length = 8
 truncation_symbol = "…/"
 
 [directory.substitutions]
