--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -148,6 +148,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
 bind = $mainMod, T, exec, ~/.config/configs/hyprv_util vswitch # switch HyprV version
+bind = $mainMod, D, exec wofi --show drun
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
