--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -16,12 +16,12 @@ exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-# exec-once = swww init
 exec = waybar
 exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
+exec-once = swww init
 exec = ~/.config/configs/hyprv_util setbg
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -46,8 +46,8 @@ general {
 
     gaps_in = 2
     gaps_out = 2
-    border_size = 3
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    border_size = 2
+    col.active_border = rgba(315200ee) rgba(0099d1)ee 90deg
     # col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
     layout = dwindle
