--- a/configs/waybar/conf/config.jsonc
+++ b/configs/waybar/conf/config.jsonc
@@ -13,7 +13,7 @@
         "disable-scroll": false,
         "disable-scroll-wraparound": true,
         "enable-bar-scroll": true,
-        "all-outputs": false,
+        "all-outputs": true,
         "format": "{icon}",
         "format-icons": {
             "1": "",
@@ -40,6 +40,8 @@
         "tray",
         "temperature",
         "battery",
+        "bluetooth",
+        "network", 
         "hyprland/language",
         "custom/myhyprv",
         "custom/power_btn",
@@ -47,6 +49,29 @@
         "clock",
         "custom/updates"
     ],
+    "network": {
+        "interface": "enp0s31f6",
+        "interval": 1,
+        "format-wifi": " {bandwidthDownBytes} {bandwidthUpBytes} ",
+        "format-ethernet": " {bandwidthDownBytes} {bandwidthUpBytes} ",
+        "format-alt": " {ipaddr} {netmask}",
+        "format-disconnected": "",
+        "tooltip": true,
+        "tooltip-format-ethernet": "{ifname} {gwaddr}",
+        "tooltip-format-wifi": "{ifname} {essid} ({signalStrength}%)",
+    },
+    "bluetooth": {
+        "format-on": " {controller_alias}",
+        "format-disabled": "",
+        "format-off": "󰂲",
+        "format-connected": " {device_alias}",
+        "format-connected-battery": " {icon} {device_alias}",
+        "tooltip-format-on": "{controller_address} {controller_address_type}",
+        "tooltip-format-off": "{controller_address} {controller_address_type}",
+        "tooltip-format-connected": "{device_address} {controller_alias}",
+        "tooltip-format-connected-battery": "{device_battery_percentage}% {device_address} {controller_alias}",
+        "format-icons": ["", "", "", "", ""]
+    },
     "mpd": {
         "server": "127.0.0.2",
         "format": "{consumeIcon}{artist} - <span style=\"italic\">{title}</span>{singleIcon}{repeatIcon}{randomIcon}{stateIcon}",
