--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -1,6 +1,11 @@
 # Setup monitors
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+monitor=DP-1,preferred,auto,auto
+monitor=HDMI-A-1,preferred,auto,auto
+
+# For example, with sddm, you can create or edit the ~/.xprofile file:
+# #!/bin/bash~/.config/hypr/set_highest_resolutions.sh
 
 # Dual monitor example on G15 Strix
 # eDP-1 is the built in monitor while DP-1 is external
@@ -12,7 +17,8 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = ~/.config/hypr/xdg-portal-hyprland
+exec = ~/.config/configs/hypr/scripts/hypr_common setmonitors
+exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -22,7 +28,7 @@ exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
 exec-once = swww init
-exec = ~/.config/configs/hyprv_util setbg
+exec = ~/.config/configs/hypr/scripts/hypr_common setbg
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -43,7 +49,6 @@ input {
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 2
     gaps_out = 2
     border_size = 2
@@ -147,7 +152,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
-bind = $mainMod, T, exec, ~/.config/configs/hyprv_util vswitch # switch HyprV version
+# bind = $mainMod, T, exec, ~/.config/configs/hypr/scripts/hypr_commom vswitch # switch HyprV version
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
