--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -27,8 +27,12 @@ exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
-exec-once = swww init
+# https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
+exec-once = hyprpaper
 exec = ~/.config/configs/hypr/scripts/hypr_common setbg
+
+# preload = ~/.config/configs/background.png
+# wallpaper = ,~/.config/configs/background.png
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
