--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -27,9 +27,12 @@ exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
+exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
 exec-once = hyprpaper
 exec = ~/.config/configs/hypr/scripts/hypr_common setbg
+
+
 
 # preload = ~/.config/configs/background.png
 # wallpaper = ,~/.config/configs/background.png
@@ -56,7 +59,7 @@ general {
     gaps_in = 2
     gaps_out = 2
     border_size = 2
-    col.active_border = rgba(315200ee) rgba(0099d1)ee 90deg
+    col.active_border = rgba(ff7070ff) rgba(0aceffff) 90deg
     # col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
     layout = dwindle
@@ -86,17 +89,28 @@ decoration {
     col.shadow = rgba(1a1a1aee)
 }
 
+
+
+
 animations {
     enabled = yes
-
+    
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = myBezier, 0.10, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier, slide
-    animation = windowsOut, 1, 7, myBezier, slide
-    animation = border, 1, 10, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.1, 0.1, 1.1
+    bezier = winOut, 0.3, -0.3, 0, 1 #  0.10, 0.9, 0.1, 1.05
+    bezier = liner, 1, 1, 1, 1
+    bezier = linear, 0.0, 0.0, 1.0, 1.0
+
+     animation = windowsIn, 1, 6, winIn, slide
+     animation = windowsOut, 1, 5, winOut, slide
+     animation = windowsMove, 1, 5, wind, slide
+     animation = border, 1, 10, default
+     animation = borderangle, 1, 100, linear, loop
+     animation = fade, 1, 10, default
+     animation = workspaces, 1, 5, wind
+     animation = windows, 1, 6, wind, slide
 }
 
 dwindle {
