--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -31,3 +31,5 @@ url_color        #0087bd
 url_style        dotted
 #Close the terminal without confirmation
 confirm_os_window_close 0
+enable_audio_bell no
+enable_visual_bell no
