--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -32,11 +32,6 @@ exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
 exec-once = hyprpaper
 exec = ~/.config/configs/hypr/scripts/hypr_common setbg
 
-
-
-# preload = ~/.config/configs/background.png
-# wallpaper = ,~/.config/configs/background.png
-
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -73,24 +68,20 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    
+    inactive_opacity = 0.65
+    blurls = lockscreen
+    drop_shadow = yes
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
+
     blur {
         enabled = true
         size = 7
         passes = 4
         new_optimizations = true
     }
-
-    blurls = lockscreen
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
-
-
-
 
 animations {
     enabled = yes
