--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -30,7 +30,7 @@ exec-once = wl-paste --watch cliphist store
 exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
 exec-once = hyprpaper
-exec = ~/.config/configs/hypr/scripts/hypr_common setbg
+exec-once = ~/.config/configs/hypr/scripts/hypr_common setbg
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
