--- a/sddm/TerminalStyleLogin/theme.conf
+++ b/sddm/TerminalStyleLogin/theme.conf
@@ -1,5 +1,5 @@
 [General]
-fontFamily=monospace
-fontSize=10
-foreground=white
-background=black
+fontFamily=DejaVu Sans Mono Bold
+fontSize=14
+foreground=#00FF00  # Bright green color
+background=#000000  # Black background
