--- a/sddm/TerminalStyleLogin/theme.conf
+++ b/sddm/TerminalStyleLogin/theme.conf
@@ -1,5 +1,8 @@
 [General]
-fontFamily=DejaVu Sans Mono Bold
+fontFamily=monospace
 fontSize=14
-foreground=#00FF00  # Bright green color
-background=#000000  # Black background
+foreground=white
+background=black
+
+#foreground=#00FF00  # Bright green color
+#background=#000000  # Black background
