--- a/sddm/TerminalStyleLogin/theme.conf
+++ b/sddm/TerminalStyleLogin/theme.conf
@@ -1,8 +1,8 @@
 [General]
 fontFamily=monospace
 fontSize=14
-foreground=white
+foreground=#00FF00FF
+fontcolor=#00FF00FF
 background=black
-
-#foreground=#00FF00  # Bright green color
-#background=#000000  # Black background
+fontscale=1.1
+glowcolor=#FFE8007D
