--- a/sddm/TerminalStyleLogin/theme.conf
+++ b/sddm/TerminalStyleLogin/theme.conf
@@ -1,8 +1,6 @@
 [General]
 fontFamily=monospace
 fontSize=14
-foreground=#00FF00FF
-fontcolor=#00FF00FF
+foreground=brightgeen
+fontcolor=brightgreen
 background=black
-fontscale=1.1
-glowcolor=#FFE8007D
