--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -18,7 +18,6 @@ monitor=HDMI-A-1,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec = ~/.config/configs/hypr/scripts/hypr_common setmonitors
-exec-once = hyprpaper
 exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -30,7 +29,11 @@ exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
 exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
-exec-once = ~/.config/configs/hypr/scripts/hypr_common setbg
+
+exec-once = hyprpaper
+# exec-once = ~/.config/configs/hypr/scripts/hypr_common setbg
+exec-once = hyprctl hyprpaper preload "~/.config/configs/backgrounds/background.jpg"
+exec-once = hyprctl hyprpaper wallpaper ,"~/.config/configs/backgrounds/background.jpg"
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input { 
