--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -35,6 +35,12 @@ exec-once = hyprpaper
 exec-once = hyprctl hyprpaper preload "~/.config/configs/backgrounds/background.jpg"
 exec-once = hyprctl hyprpaper wallpaper ,"~/.config/configs/backgrounds/background.jpg"
 
+
+# Set the master area size to 60%
+exec-once = hyprctl keyword layout mastersize 0.6
+exec-once = hyprctl keyword layout layout master
+
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input { 
     kb_layout = us
@@ -165,6 +171,9 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
 # bind = $mainMod, T, exec, ~/.config/configs/hypr/scripts/hypr_commom vswitch # switch HyprV version
+
+bind = $mainMod, Shift, Right, exec, hyprctl dispatch resizeactive 10 0
+bind = $mainMod, Shift, Left, exec, hyprctl dispatch resizeactive -10 0
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
