--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -172,8 +172,28 @@ bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
 # bind = $mainMod, T, exec, ~/.config/configs/hypr/scripts/hypr_commom vswitch # switch HyprV version
 
-bind = $mainMod, Shift, Right, exec, hyprctl dispatch resizeactive 10 0
-bind = $mainMod, Shift, Left, exec, hyprctl dispatch resizeactive -10 0
+
+# will switch to a submap called resize
+bind=$mainMod,R,submap,resize
+# will start a submap called "resize"
+submap=resize
+# sets repeatable binds for resizing the active window
+binde=,right,resizeactive,10 0
+binde=,left,resizeactive,-10 0
+binde=,up,resizeactive,0 -10
+binde=,down,resizeactive,0 10
+
+# use reset to go back to the global submap
+bind=,escape,submap,reset 
+
+# will reset the submap, which will return to the global submap
+submap=reset
+
+
+
+
+#bind = $mainMod, Shift, Right, exec, hyprctl dispatch resizeactive 10 0
+#bind = $mainMod, Shift, Left, exec, hyprctl dispatch resizeactive -10 0
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
