--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -18,11 +18,11 @@ monitor=HDMI-A-1,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec = ~/.config/configs/hypr/scripts/hypr_common setmonitors
+exec-once = waybar & hyprpaper
 exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec = waybar
 exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
@@ -30,15 +30,13 @@ exec-once = wl-paste --watch cliphist store
 exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
 
-exec-once = hyprpaper
+
 # exec-once = ~/.config/configs/hypr/scripts/hypr_common setbg
-exec-once = hyprctl hyprpaper preload "~/.config/configs/backgrounds/background.jpg"
-exec-once = hyprctl hyprpaper wallpaper ,"~/.config/configs/backgrounds/background.jpg"
-
-
+# exec-once = hyprctl hyprpaper preload "~/.config/configs/backgrounds/background.jpg"
+# exec-once = hyprctl hyprpaper wallpaper ,"~/.config/configs/backgrounds/background.jpg"
 # Set the master area size to 60%
-exec-once = hyprctl keyword layout mastersize 0.6
-exec-once = hyprctl keyword layout layout master
+# exec-once = hyprctl keyword layout mastersize 0.6
+# exec-once = hyprctl keyword layout layout master
 
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
