--- a/configs/hypr/hyprpaper.conf
+++ b/configs/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = "~/.config/configs/backgrounds/background.jpg"
-wallpaper = ,"~/.config/configs/backgrounds/background.jpg"
+preload = $HOME/.config/configs/backgrounds/background.jpg
+wallpaper = ,$HOME/.config/configs/backgrounds/background.jpg
