--- a/configs/hypr/hyprpaper.conf
+++ b/configs/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
-preload = "~/.config/configs/backgrounds/background.jpg"
+preload = ~/.config/configs/backgrounds/background.jpg
 wallpaper = ",~/.config/configs/backgrounds/background.jpg"
-ipc = off
