--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -18,7 +18,8 @@ monitor=HDMI-A-1,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec = ~/.config/configs/hypr/scripts/hypr_common setmonitors
-exec-once = waybar & hyprpaper
+exec-once = waybar
+exec-once = swww init
 exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -28,6 +29,8 @@ exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
 exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
+exec-once = ~/.config/configs/hypr/scripts/hypr_common setbg
+
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
 
 
@@ -101,14 +104,14 @@ animations {
     bezier = liner, 1, 1, 1, 1
     bezier = linear, 0.0, 0.0, 1.0, 1.0
 
-     animation = windowsIn, 1, 6, winIn, slide
-     animation = windowsOut, 1, 5, winOut, slide
-     animation = windowsMove, 1, 5, wind, slide
-     animation = border, 1, 10, default
-     animation = borderangle, 1, 100, linear, loop
-     animation = fade, 1, 10, default
-     animation = workspaces, 1, 5, wind
-     animation = windows, 1, 6, wind, slide
+    animation = windowsIn, 1, 6, winIn, slide
+    animation = windowsOut, 1, 5, winOut, slide
+    animation = windowsMove, 1, 5, wind, slide
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 100, linear, loop
+    animation = fade, 1, 10, default
+    animation = workspaces, 1, 5, wind
+    animation = windows, 1, 6, wind, slide
 }
 
 dwindle {
