--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -18,18 +18,18 @@ monitor=HDMI-A-1,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec = ~/.config/configs/hypr/scripts/hypr_common setmonitors
-exec-once = waybar
-exec-once = swww init
 exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = swww init
+exec-once = waybar
 exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
 exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
-exec-once = ~/.config/configs/hypr/scripts/hypr_common setbg
+exec = ~/.config/configs/hypr/scripts/hypr_common setbg
 
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
 
