--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -55,9 +55,9 @@ general {
     gaps_in = 2
     gaps_out = 2
     border_size = 2
-    col.active_border = rgba(ff7070ff) rgba(0aceffff) 90deg
+    # col.active_border = rgba(ff7070ff) rgba(0aceffff) 90deg
     # col.active_border=rgb(cdd6f4)
-    col.inactive_border = rgba(595959aa)
+    # col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
 
@@ -69,7 +69,8 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    inactive_opacity = 0.65
+    active_opacity = 0.9
+    inactive_opacity = 0.8
     blurls = lockscreen
     drop_shadow = yes
     shadow_range = 4
