--- a/configs/wofi/config
+++ b/configs/wofi/config
@@ -2,7 +2,7 @@ width=600
 height=300
 location=center
 show=drun
-prompt=Search...
+prompt=Run...
 filter_rate=100
 allow_markup=true
 no_actions=true
