--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -194,6 +194,22 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+
+$w1 = ~/.config/configs/hypr/scripts/hypr_common setbg "background1.jpg"
+$w2 = ~/.config/configs/hypr/scripts/hypr_common setbg "background2.jpg"
+$w3 = ~/.config/configs/hypr/scripts/hypr_common setbg "background3.jpg"
+
+bind=SUPER,1,workspace,1  #Superkey + 1 switches to workspace 1
+bind=SUPER,1,exec,$w1     #SuperKey + 1 switches to wallpaper $w1 on DP-1 as defined in the variable
+
+bind=SUPER,2,workspace,2  #Superkey + 2 switches to workspace 2
+bind=SUPER,2,exec,$w2     #SuperKey + 2 switches to wallpaper $w2 on DP-1 as defined in the variable
+
+bind=SUPER,3,workspace,3  #Superkey + 3 switches to workspace 3
+bind=SUPER,3,exec,$w3     #SuperKey + 3 switches to wallpaper $w3 on DP-1 as defined in the variable
+
+
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
