--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -28,6 +28,7 @@ exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
+# animated border (comment this out if you don't want it)
 exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
 exec = ~/.config/configs/hypr/scripts/hypr_common setbg
 
@@ -56,7 +57,6 @@ general {
     gaps_out = 2
     border_size = 2
     # col.active_border = rgba(ff7070ff) rgba(0aceffff) 90deg
-    # col.active_border=rgb(cdd6f4)
     # col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
