--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -92,9 +92,9 @@ animations {
 
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.1, 0.1, 1.1
-    bezier = winOut, 0.3, -0.3, 0, 1 #  0.10, 0.9, 0.1, 1.05
-    bezier = liner, 1, 1, 1, 1
+    bezier = winOut, 0.3, -0.3, 0, 1
     bezier = linear, 0.0, 0.0, 1.0, 1.0
+    bezier = easeIn, 0.42, 0.0, 1.0, 1.0  # New bezier curve for ease-in effect
 
     animation = windowsIn, 1, 6, winIn, slide
     animation = windowsOut, 1, 5, winOut, slide
@@ -102,7 +102,7 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 100, linear, loop
     animation = fade, 1, 10, default
-    animation = workspaces, 1, 5, wind
+    animation = workspaces, 1, 5, easeIn, slide  # Using the new ease-in bezier curve
     animation = windows, 1, 6, wind, slide
 }
 
@@ -165,6 +165,15 @@ bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
 # bind = $mainMod, T, exec, ~/.config/configs/hypr/scripts/hypr_commom vswitch # switch HyprV version
 
+bind = $mainMod, `, exec, ~/.config/configs/hypr/scripts/hypr_common hideactivewin
+
+# audio volume
+bind = $mainMod, -, exec, pamixer --decrease 5
+bind = $mainMod, =, exec, pamixer --increase 5
+
+# screen brightness
+bind = $mainMod, Ctrl, equal, exec, brightnessctl set +5%
+bind = $mainMod, Ctrl, minus, exec, brightnessctl set 5%-
 
 # will switch to a submap called resize
 bind=$mainMod,R,submap,resize
