--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -170,6 +170,25 @@ bind = $mainMod, `, exec, ~/.config/configs/hypr/scripts/hypr_common hideactivew
 # audio volume
 bind = $mainMod, -, exec, pamixer --decrease 5
 bind = $mainMod, =, exec, pamixer --increase 5
+# mute audio
+# bind = $mainMod, BackSpace, exec, pamixer --toggle-mute 
+# # mute mic
+# bind = $mainMod, BackSpace, exec, pamixer --default-source --toggle-mute
+# bind = $mainMod, BackSpaceexec, ~/.config/configs/hypr/scripts/hypr_common hideactivewinmuteaudmic
+
+
+
+# Bind SUPER+Ctrl+- to decrease volume
+bind=$mainMod,Ctrl,-, exec,~/.config/configs/waybar/scripts/volume --dec
+
+# Bind SUPER+Ctrl+= to increase volume
+bind=$mainMod,Ctrl,=, exec,~/.config/configs/waybar/scripts/volume --inc
+
+# Bind SUPER+Backspace to mute/unmute audio
+bind=$mainMod,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle
+
+# Bind SUPER+Ctrl+Backspace to mute/unmute mic
+bind=$mainMod,Ctrl,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle-mic
 
 # screen brightness
 bind = $mainMod, Ctrl, equal, exec, brightnessctl set +5%
