--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -191,8 +191,8 @@ bind=$mainMod,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle
 bind=$mainMod,Ctrl,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle-mic
 
 # screen brightness
-bind = $mainMod, Ctrl, equal, exec, brightnessctl set +5%
-bind = $mainMod, Ctrl, minus, exec, brightnessctl set 5%-
+bind = $mainMod, Ctrl, =, exec, brightnessctl set +5%
+bind = $mainMod, Ctrl, -, exec, brightnessctl set 5%-
 
 # will switch to a submap called resize
 bind=$mainMod,R,submap,resize
