--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -168,28 +168,20 @@ bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # o
 bind = $mainMod, `, exec, ~/.config/configs/hypr/scripts/hypr_common hideactivewin
 
 # audio volume
-bind = $mainMod, -, exec, pamixer --decrease 5
-bind = $mainMod, =, exec, pamixer --increase 5
-# mute audio
-# bind = $mainMod, BackSpace, exec, pamixer --toggle-mute 
-# # mute mic
-# bind = $mainMod, BackSpace, exec, pamixer --default-source --toggle-mute
-# bind = $mainMod, BackSpaceexec, ~/.config/configs/hypr/scripts/hypr_common hideactivewinmuteaudmic
-# Bind SUPER+Ctrl+- to decrease volume
-bind=$mainMod,Ctrl,-, exec,~/.config/configs/waybar/scripts/volume --dec
+# bind=$mainMod,-, exec,~/.config/configs/waybar/scripts/volume --dec
+# bind=$mainMod,=, exec,~/.config/configs/waybar/scripts/volume --inc
 
-# Bind SUPER+Ctrl+= to increase volume
-bind=$mainMod,Ctrl,=, exec,~/.config/configs/waybar/scripts/volume --inc
+bind = $mainMod_SHIFT, RETURN, exec, kitty
 
-# Bind SUPER+Backspace to mute/unmute audio
-bind=$mainMod,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle
+# # Bind SUPER+Backspace to mute/unmute audio
+# bind=$mainMod,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle
 
-# Bind SUPER+Ctrl+Backspace to mute/unmute mic
-bind=$mainMod,Ctrl,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle-mic
+# # Bind SUPER+Ctrl+Backspace to mute/unmute mic
+# bind=$mainMod,Ctrl,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle-mic
 
-# screen brightness
-bind = $mainMod, Ctrl, =, exec, brightnessctl set +5%
-bind = $mainMod, Ctrl, -, exec, brightnessctl set 5%-
+# # screen brightness
+# bind = $mainMod, Ctrl, =, exec, brightnessctl set +5%
+# bind = $mainMod, Ctrl, -, exec, brightnessctl set 5%-
 
 # will switch to a submap called resize
 bind=$mainMod,R,submap,resize
