--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -169,8 +169,8 @@ bind = $mainMod, `, exec, ~/.config/configs/hypr/scripts/hypr_common hideactivew
 bind = $mainMod_SHIFT, RETURN, exec, kitty
 
 # audio volume
-# bind=$mainMod,-, exec,~/.config/configs/waybar/scripts/volume --dec
-# bind=$mainMod,=, exec,~/.config/configs/waybar/scripts/volume --inc
+bind=$mainMod,minus, exec, ~/.config/configs/waybar/scripts/volume --dec
+bind=$mainMod,equal, exec, ~/.config/configs/waybar/scripts/volume --inc
 
 
 
