--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -171,18 +171,14 @@ bind = $mainMod_SHIFT, RETURN, exec, kitty
 # audio volume
 bind=$mainMod,minus, exec, ~/.config/configs/waybar/scripts/volume --dec
 bind=$mainMod,equal, exec, ~/.config/configs/waybar/scripts/volume --inc
+# Bind SUPER+Backspace to mute/unmute audio
+bind=$mainMod,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle
+# Bind SUPER+Ctrl+Backspace to mute/unmute mic
+bind=$mainMod_Ctrl,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle-mic
 
-
-
-# # Bind SUPER+Backspace to mute/unmute audio
-# bind=$mainMod,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle
-
-# # Bind SUPER+Ctrl+Backspace to mute/unmute mic
-# bind=$mainMod,Ctrl,Backspace, exec,~/.config/configs/waybar/scripts/volume --toggle-mic
-
-# # screen brightness
-# bind = $mainMod, Ctrl, =, exec, brightnessctl set +5%
-# bind = $mainMod, Ctrl, -, exec, brightnessctl set 5%-
+# screen brightness
+bind = $mainMod_Ctrl, equal, exec, brightnessctl set +5%
+bind = $mainMod_Ctrl, minus, exec, brightnessctl set 5%-
 
 # will switch to a submap called resize
 bind=$mainMod,R,submap,resize
