--- a/configs/waybar/conf/config.jsonc
+++ b/configs/waybar/conf/config.jsonc
@@ -144,7 +144,7 @@
 
     "custom/lock_screen": {
         "format": "",
-        "on-click": "sh -c '(sleep 0.5s; swaylock)' & disown",
+        "on-click": "sh -c '(sleep 0.5s; swaylock -c ~/.config/configs/swaylock/config)' & disown",
         "tooltip": false
     },
 
