--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -94,7 +94,7 @@ animations {
     bezier = winIn, 0.1, 1.1, 0.1, 1.1
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = linear, 0.0, 0.0, 1.0, 1.0
-    bezier = easeIn, 0.42, 0.0, 1.0, 1.0  # New bezier curve for ease-in effect
+    bezier = easeIn, 0.5, 0.0, 0.75, 0.75
 
     animation = windowsIn, 1, 6, winIn, slide
     animation = windowsOut, 1, 5, winOut, slide
