--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -28,6 +28,7 @@ exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
+exec-once = swayidle -w timeout 150 'swaylock -f' timeout 200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 # animated border (comment this out if you don't want it)
 exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
 exec = ~/.config/configs/hypr/scripts/hypr_common setbg
