--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -37,19 +37,19 @@
     ],
     "modules-right": [
       //  "mpd",
-        "pulseaudio",
-        "pulseaudio#microphone",
-        "backlight",
+        //"backlight",
         //"tray",
-        "battery",
-        "bluetooth",
-        "network", 
+        //"battery",
+        //"bluetooth",
+        //"network", 
         //"hyprland/language",
         //"custom/myhyprv",
         //"custom/power_btn",
         //"custom/lock_screen",
-        "idle_inhibitor",
-        "custom/updates",
+//        "custom/updates",
+//        "idle_inhibitor",
+        "pulseaudio",
+        "pulseaudio#microphone",
         "clock"        
     ],
     "network": {
