--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -4,6 +4,7 @@ monitor=,preferred,auto,auto
 monitor=DP-1,preferred,auto,auto
 monitor=HDMI-A-1,preferred,auto,auto
 
+
 # For example, with sddm, you can create or edit the ~/.xprofile file:
 # #!/bin/bash~/.config/hypr/set_highest_resolutions.sh
 
@@ -27,11 +28,16 @@ exec-once = waybar
 exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
-exec-once = wl-paste --watch cliphist store
+
+exec-once = wl-paste -l -t text --watch clipman store &
+exec = clipman --max-items 1 --trim-to-length 0
 exec-once = swayidle -w timeout 150 'swaylock -f' timeout 200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
-# animated border (comment this out if you don't want it)
+
+# animated border (comment this ouexec = clipman --max-items 1 --trim-to-length 0t if you don't want it)
 exec-once = ~/.config/configs/hypr/scripts/hypr_common setborder
 exec = ~/.config/configs/hypr/scripts/hypr_common setbg
+
+
 
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
 
